@@ -53,6 +53,7 @@ cloud_config_modules:
  - apt-pipelining
  - apt-configure
  - package-update-upgrade-install
+ - fan
  - landscape
  - timezone
  - puppet
